Fixed some existing person leaderboard problems. Code refactor. Added assessment point leaderboard backend infrastructure. Added integration tests.