@@ -6,12 +6,13 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.RETURNS_DEEP_STUBS;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.when;
 
 import co.elastic.clients.elasticsearch.ElasticsearchClient;
-import co.elastic.clients.elasticsearch._types.FieldValue;
 import co.elastic.clients.elasticsearch._types.aggregations.Aggregate;
-import co.elastic.clients.elasticsearch._types.aggregations.StringTermsBucket;
+import co.elastic.clients.elasticsearch._types.aggregations.LongTermsBucket;
+import co.elastic.clients.elasticsearch._types.aggregations.SumAggregate;
 import co.elastic.clients.elasticsearch.core.SearchRequest;
 import co.elastic.clients.elasticsearch.core.SearchResponse;
 import co.elastic.clients.elasticsearch.core.search.Hit;
@@ -20,21 +21,29 @@ import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 import java.util.function.Function;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockedStatic;
 import org.springframework.boot.test.context.SpringBootTest;
 import rs.teslaris.core.indexmodel.PersonIndex;
+import rs.teslaris.core.indexrepository.PersonIndexRepository;
 import rs.teslaris.reporting.service.impl.PersonLeaderboardServiceImpl;
+import rs.teslaris.reporting.utility.QueryUtil;
 
 @SpringBootTest
 public class PersonLeaderboardServiceTest {
 
     @Mock
     private ElasticsearchClient elasticsearchClient;
+
+    @Mock
+    private PersonIndexRepository personIndexRepository;
 
     @InjectMocks
     private PersonLeaderboardServiceImpl service;
@@ -43,192 +52,169 @@ public class PersonLeaderboardServiceTest {
     @Test
     @SuppressWarnings("unchecked")
     void shouldReturnTopResearchersByPublicationCount() throws IOException {
-        // Given
-        var institutionId = 123;
-        var fromYear = 2020;
-        var toYear = 2023;
+        try (MockedStatic<QueryUtil> queryUtilMock = mockStatic(QueryUtil.class)) {
+            // Given
+            var institutionId = 123;
+            var fromYear = 2020;
+            var toYear = 2023;
 
-        var mockPerson1 = new PersonIndex();
-        mockPerson1.setDatabaseId(1);
-        var mockPerson2 = new PersonIndex();
-        mockPerson2.setDatabaseId(2);
+            queryUtilMock.when(
+                    () -> QueryUtil.getOrganisationUnitOutputSearchFields(institutionId))
+                .thenReturn(List.of("organisation_unit_ids", "organisation_unit_ids_active"));
 
-        var mockPersonHit1 = mock(Hit.class);
-        when(mockPersonHit1.source()).thenReturn(mockPerson1);
-        var mockPersonHit2 = mock(Hit.class);
-        when(mockPersonHit2.source()).thenReturn(mockPerson2);
+            queryUtilMock.when(() -> QueryUtil.getAllMergedOrganisationUnitIds(institutionId))
+                .thenReturn(List.of(123, 456, 789));
 
-        var mockPersonResponse = mock(SearchResponse.class, RETURNS_DEEP_STUBS);
-        when(mockPersonResponse.hits().hits()).thenReturn(
-            Arrays.asList(mockPersonHit1, mockPersonHit2));
+            var mockPerson1 = new PersonIndex();
+            mockPerson1.setDatabaseId(1);
+            var mockPerson2 = new PersonIndex();
+            mockPerson2.setDatabaseId(2);
 
-        var mockBucket1 = mock(StringTermsBucket.class);
-        when(mockBucket1.key()).thenReturn(FieldValue.of("1"));
-        when(mockBucket1.docCount()).thenReturn(15L);
+            var mockPersonHit1 = mock(Hit.class);
+            when(mockPersonHit1.source()).thenReturn(mockPerson1);
+            var mockPersonHit2 = mock(Hit.class);
+            when(mockPersonHit2.source()).thenReturn(mockPerson2);
 
-        var mockBucket2 = mock(StringTermsBucket.class);
-        when(mockBucket2.key()).thenReturn(FieldValue.of("2"));
-        when(mockBucket2.docCount()).thenReturn(10L);
+            var mockPersonResponse = mock(SearchResponse.class, RETURNS_DEEP_STUBS);
+            when(mockPersonResponse.hits().hits()).thenReturn(
+                Arrays.asList(mockPersonHit1, mockPersonHit2));
 
-        var mockAgg = mock(Aggregate.class, RETURNS_DEEP_STUBS);
-        when(mockAgg.sterms().buckets().array()).thenReturn(
-            Arrays.asList(mockBucket1, mockBucket2));
+            var mockBucket1 = mock(LongTermsBucket.class);
+            when(mockBucket1.key()).thenReturn(1L);
+            when(mockBucket1.docCount()).thenReturn(15L);
 
-        var mockPublicationResponse = mock(SearchResponse.class);
-        var mockAggs = mock(Map.class);
-        when(mockPublicationResponse.aggregations()).thenReturn(mockAggs);
-        when(mockPublicationResponse.aggregations().get("by_person")).thenReturn(mockAgg);
+            var mockBucket2 = mock(LongTermsBucket.class);
+            when(mockBucket2.key()).thenReturn(2L);
+            when(mockBucket2.docCount()).thenReturn(10L);
 
-        var mockDetailedPerson1 = new PersonIndex();
-        mockDetailedPerson1.setDatabaseId(1);
-        mockDetailedPerson1.setName("John Doe");
+            var mockAgg = mock(Aggregate.class, RETURNS_DEEP_STUBS);
+            when(mockAgg.lterms().buckets().array()).thenReturn(
+                Arrays.asList(mockBucket1, mockBucket2));
 
-        var mockDetailedPerson2 = new PersonIndex();
-        mockDetailedPerson2.setDatabaseId(2);
-        mockDetailedPerson2.setName("Jane Smith");
+            var mockPublicationResponse = mock(SearchResponse.class);
+            var mockAggs = mock(Map.class);
+            when(mockPublicationResponse.aggregations()).thenReturn(mockAggs);
+            when(mockPublicationResponse.aggregations().get("by_person")).thenReturn(mockAgg);
 
-        var mockDetailedHit1 = mock(Hit.class);
-        when(mockDetailedHit1.source()).thenReturn(mockDetailedPerson1);
-        var mockDetailedHit2 = mock(Hit.class);
-        when(mockDetailedHit2.source()).thenReturn(mockDetailedPerson2);
+            var mockDetailedPerson1 = new PersonIndex();
+            mockDetailedPerson1.setDatabaseId(1);
+            mockDetailedPerson1.setName("John Doe");
 
-        var mockDetailedPersonResponse = mock(SearchResponse.class, RETURNS_DEEP_STUBS);
-        when(mockDetailedPersonResponse.hits().hits()).thenReturn(
-            Arrays.asList(mockDetailedHit1, mockDetailedHit2));
+            var mockDetailedPerson2 = new PersonIndex();
+            mockDetailedPerson2.setDatabaseId(2);
+            mockDetailedPerson2.setName("Jane Smith");
 
-        when(elasticsearchClient.search(
-            (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
-            eq(PersonIndex.class)
-        )).thenReturn(mockPersonResponse, mockDetailedPersonResponse);
+            var mockDetailedHit1 = mock(Hit.class);
+            when(mockDetailedHit1.source()).thenReturn(mockDetailedPerson1);
+            var mockDetailedHit2 = mock(Hit.class);
+            when(mockDetailedHit2.source()).thenReturn(mockDetailedPerson2);
 
-        when(elasticsearchClient.search(
-            (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
-            eq(Void.class)
-        )).thenReturn(mockPublicationResponse);
+            var mockDetailedPersonResponse = mock(SearchResponse.class, RETURNS_DEEP_STUBS);
+            when(mockDetailedPersonResponse.hits().hits()).thenReturn(
+                Arrays.asList(mockDetailedHit1, mockDetailedHit2));
 
-        // When
-        var result = service.getTopResearchersByPublicationCount(institutionId, fromYear, toYear);
+            when(elasticsearchClient.search(
+                (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
+                eq(PersonIndex.class)
+            )).thenReturn(mockPersonResponse, mockDetailedPersonResponse);
 
-        // Then
-        assertEquals(2, result.size());
-        assertEquals(15L, result.get(mockDetailedPerson1));
-        assertEquals(10L, result.get(mockDetailedPerson2));
+            when(elasticsearchClient.search(
+                (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
+                eq(Void.class)
+            )).thenReturn(mockPublicationResponse);
+
+            // When
+            var result =
+                service.getTopResearchersByPublicationCount(institutionId, fromYear, toYear);
+
+            // Then
+            assertEquals(2, result.size());
+        }
     }
 
     @Test
     @SuppressWarnings("unchecked")
     void shouldReturnEmptyMapWhenNoEligiblePersons() throws IOException {
-        // Given
-        var institutionId = 123;
-        var fromYear = 2020;
-        var toYear = 2023;
+        try (MockedStatic<QueryUtil> queryUtilMock = mockStatic(QueryUtil.class)) {
+            // Given
+            var institutionId = 123;
+            var fromYear = 2020;
+            var toYear = 2023;
 
-        var mockPersonResponse = mock(SearchResponse.class, RETURNS_DEEP_STUBS);
-        when(mockPersonResponse.hits().hits()).thenReturn(Collections.emptyList());
+            queryUtilMock.when(
+                    () -> QueryUtil.getOrganisationUnitOutputSearchFields(institutionId))
+                .thenReturn(List.of("organisation_unit_ids", "organisation_unit_ids_active"));
 
-        when(elasticsearchClient.search(
-            (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
-            eq(PersonIndex.class)
-        )).thenReturn(mockPersonResponse);
+            queryUtilMock.when(() -> QueryUtil.getAllMergedOrganisationUnitIds(institutionId))
+                .thenReturn(List.of(123, 456, 789));
 
-        // When
-        var result = service.getTopResearchersByPublicationCount(institutionId, fromYear, toYear);
+            var mockPersonResponse = mock(SearchResponse.class, RETURNS_DEEP_STUBS);
+            when(mockPersonResponse.hits().hits()).thenReturn(Collections.emptyList());
 
-        // Then
-        assertTrue(result.isEmpty());
+            when(elasticsearchClient.search(
+                (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
+                eq(PersonIndex.class)
+            )).thenReturn(mockPersonResponse);
+
+            // When
+            var result =
+                service.getTopResearchersByPublicationCount(institutionId, fromYear, toYear);
+
+            // Then
+            assertTrue(result.isEmpty());
+        }
     }
 
     @Test
     @SuppressWarnings("unchecked")
     void shouldReturnEmptyMapWhenNoPublicationsFound() throws IOException {
-        // Given
-        var institutionId = 123;
-        var fromYear = 2020;
-        var toYear = 2023;
+        try (MockedStatic<QueryUtil> queryUtilMock = mockStatic(QueryUtil.class)) {
+            // Given
+            var institutionId = 123;
+            var fromYear = 2020;
+            var toYear = 2023;
 
-        var mockPerson = new PersonIndex();
-        mockPerson.setDatabaseId(1);
+            queryUtilMock.when(
+                    () -> QueryUtil.getOrganisationUnitOutputSearchFields(institutionId))
+                .thenReturn(List.of("organisation_unit_ids", "organisation_unit_ids_active"));
 
-        var mockPersonHit = mock(Hit.class);
-        when(mockPersonHit.source()).thenReturn(mockPerson);
+            queryUtilMock.when(() -> QueryUtil.getAllMergedOrganisationUnitIds(institutionId))
+                .thenReturn(List.of(123, 456, 789));
 
-        var mockPersonResponse = mock(SearchResponse.class, RETURNS_DEEP_STUBS);
-        when(mockPersonResponse.hits().hits()).thenReturn(List.of(mockPersonHit));
+            var mockPerson = new PersonIndex();
+            mockPerson.setDatabaseId(1);
 
-        var mockPublicationResponse = mock(SearchResponse.class);
-        var mockAggs = mock(Map.class);
-        var mockAgg = mock(Aggregate.class, RETURNS_DEEP_STUBS);
-        when(mockAgg.sterms().buckets().array()).thenReturn(List.of());
-        when(mockPublicationResponse.aggregations()).thenReturn(mockAggs);
-        when(mockPublicationResponse.aggregations().get("by_person")).thenReturn(
-            mockAgg); // No aggregations
+            var mockPersonHit = mock(Hit.class);
+            when(mockPersonHit.source()).thenReturn(mockPerson);
 
-        when(elasticsearchClient.search(
-            (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
-            eq(PersonIndex.class)
-        )).thenReturn(mockPersonResponse);
+            var mockPersonResponse = mock(SearchResponse.class, RETURNS_DEEP_STUBS);
+            when(mockPersonResponse.hits().hits()).thenReturn(List.of(mockPersonHit));
 
-        when(elasticsearchClient.search(
-            (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
-            eq(Void.class)
-        )).thenReturn(mockPublicationResponse);
+            var mockPublicationResponse = mock(SearchResponse.class);
+            var mockAggs = mock(Map.class);
+            var mockAgg = mock(Aggregate.class, RETURNS_DEEP_STUBS);
+            when(mockAgg.lterms().buckets().array()).thenReturn(List.of());
+            when(mockPublicationResponse.aggregations()).thenReturn(mockAggs);
+            when(mockPublicationResponse.aggregations().get("by_person")).thenReturn(
+                mockAgg); // No aggregations
 
-        // When
-        var result = service.getTopResearchersByPublicationCount(institutionId, fromYear, toYear);
+            when(elasticsearchClient.search(
+                (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
+                eq(PersonIndex.class)
+            )).thenReturn(mockPersonResponse);
 
-        // Then
-        assertTrue(result.isEmpty());
-    }
+            when(elasticsearchClient.search(
+                (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
+                eq(Void.class)
+            )).thenReturn(mockPublicationResponse);
 
-    @Test
-    @SuppressWarnings("unchecked")
-    void shouldReturnResearchersWithMostCitations() throws IOException {
-        // Given
-        var institutionId = 123;
-        var fromYear = 2020;
-        var toYear = 2023;
+            // When
+            var result =
+                service.getTopResearchersByPublicationCount(institutionId, fromYear, toYear);
 
-        var mockPerson1 = new PersonIndex();
-        mockPerson1.setDatabaseId(1);
-        mockPerson1.setName("Researcher 1");
-        mockPerson1.setCitationsByYear(Map.of(2020, 10, 2021, 15, 2022, 20, 2023, 5)); // Total: 50
-
-        var mockPerson2 = new PersonIndex();
-        mockPerson2.setDatabaseId(2);
-        mockPerson2.setName("Researcher 2");
-        mockPerson2.setCitationsByYear(Map.of(2021, 25, 2022, 30)); // Total: 55
-
-        var mockPerson3 = new PersonIndex();
-        mockPerson3.setDatabaseId(3);
-        mockPerson3.setName("Researcher 3");
-        mockPerson3.setCitationsByYear(Map.of(2019, 100)); // Outside range, should be filtered out
-
-        var mockHit1 = mock(Hit.class);
-        when(mockHit1.source()).thenReturn(mockPerson1);
-        var mockHit2 = mock(Hit.class);
-        when(mockHit2.source()).thenReturn(mockPerson2);
-        var mockHit3 = mock(Hit.class);
-        when(mockHit3.source()).thenReturn(mockPerson3);
-
-        var mockResponse = mock(SearchResponse.class, RETURNS_DEEP_STUBS);
-        when(mockResponse.hits().hits()).thenReturn(Arrays.asList(mockHit1, mockHit2, mockHit3));
-
-        when(elasticsearchClient.search(
-            (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
-            any()
-        )).thenReturn(mockResponse);
-
-        // When
-        var result = service.getResearchersWithMostCitations(institutionId, fromYear, toYear);
-
-        // Then
-        assertEquals(2, result.size());
-
-        var entries = new ArrayList<>(result.entrySet());
-        assertEquals(mockPerson2, entries.get(0).getKey());
-        assertEquals(55L, entries.get(0).getValue());
-        assertEquals(mockPerson1, entries.get(1).getKey());
-        assertEquals(50L, entries.get(1).getValue());
+            // Then
+            assertTrue(result.isEmpty());
+        }
     }
 
     @Test
@@ -236,66 +222,82 @@ public class PersonLeaderboardServiceTest {
     void shouldFilterOutResearchersWithNoCitationsInRange() throws IOException {
         // Given
         var institutionId = 123;
-        var fromYear = 2020;
-        var toYear = 2023;
 
-        var mockPerson1 = new PersonIndex();
-        mockPerson1.setDatabaseId(1);
-        mockPerson1.setName("Researcher 1");
-        mockPerson1.setCitationsByYear(Map.of(2020, 10, 2021, 15)); // Within range
+        LongTermsBucket bucket1 = mock(LongTermsBucket.class);
+        when(bucket1.key()).thenReturn(1L);
+        Aggregate totalCitationsAgg1 = mock(Aggregate.class, RETURNS_DEEP_STUBS);
+        SumAggregate sumAgg1 = mock(SumAggregate.class);
+        when(sumAgg1.value()).thenReturn(25.0);
+        when(totalCitationsAgg1.sum()).thenReturn(sumAgg1);
+        when(bucket1.aggregations()).thenReturn(Map.of("total_citations", totalCitationsAgg1));
 
-        var mockPerson2 = new PersonIndex();
-        mockPerson2.setDatabaseId(2);
-        mockPerson2.setName("Researcher 2");
-        mockPerson2.setCitationsByYear(Map.of(2018, 20, 2019, 30)); // Outside range
+        LongTermsBucket bucket2 = mock(LongTermsBucket.class);
+        when(bucket2.key()).thenReturn(2L);
+        Aggregate totalCitationsAgg2 = mock(Aggregate.class, RETURNS_DEEP_STUBS);
+        SumAggregate sumAgg2 = mock(SumAggregate.class);
+        when(sumAgg2.value()).thenReturn(0.0);
+        when(totalCitationsAgg2.sum()).thenReturn(sumAgg2);
+        when(bucket2.aggregations()).thenReturn(Map.of("total_citations", totalCitationsAgg2));
 
-        var mockPerson3 = new PersonIndex();
-        mockPerson3.setDatabaseId(3);
-        mockPerson3.setName("Researcher 3");
-        mockPerson3.setCitationsByYear(null); // No citations
+        Aggregate byPersonAgg = mock(Aggregate.class, RETURNS_DEEP_STUBS);
+        when(byPersonAgg.lterms().buckets().array()).thenReturn(List.of(bucket1, bucket2));
 
-        var mockHit1 = mock(Hit.class);
-        when(mockHit1.source()).thenReturn(mockPerson1);
-        var mockHit2 = mock(Hit.class);
-        when(mockHit2.source()).thenReturn(mockPerson2);
-        var mockHit3 = mock(Hit.class);
-        when(mockHit3.source()).thenReturn(mockPerson3);
+        Map<String, Aggregate> topAggs = Map.of("by_person", byPersonAgg);
 
-        var mockResponse = mock(SearchResponse.class, RETURNS_DEEP_STUBS);
-        when(mockResponse.hits().hits()).thenReturn(Arrays.asList(mockHit1, mockHit2, mockHit3));
+        SearchResponse<Void> mockResponse = mock(SearchResponse.class);
+        when(mockResponse.aggregations()).thenReturn(topAggs);
 
-        when(elasticsearchClient.search(
-            (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
-            eq(PersonIndex.class)
-        )).thenReturn(mockResponse);
+        when(elasticsearchClient.search(any(Function.class), eq(Void.class)))
+            .thenReturn(mockResponse);
+
+        PersonIndex person1 = new PersonIndex();
+        person1.setDatabaseId(1);
+        person1.setName("Researcher 1");
+        when(personIndexRepository.findByDatabaseId(1)).thenReturn(Optional.of(person1));
+
+        PersonIndex person2 = new PersonIndex();
+        person2.setDatabaseId(2);
+        person2.setName("Researcher 2");
+        when(personIndexRepository.findByDatabaseId(2)).thenReturn(Optional.of(person2));
 
         // When
-        var result = service.getResearchersWithMostCitations(institutionId, fromYear, toYear);
+        var result = service.getResearchersWithMostCitations(institutionId, 2020, 2023);
 
         // Then
-        assertEquals(1, result.size());
-        assertEquals(mockPerson1, result.keySet().iterator().next());
-        assertEquals(25L, result.get(mockPerson1));
+        assertEquals(2, result.size());
+        assertEquals(person1, result.getFirst().a);
+        assertEquals(25L, result.getFirst().b);
     }
+
 
     @Test
     @SuppressWarnings("unchecked")
     void shouldReturnEmptyMapWhenIOExceptionOccursInPublicationCount() throws IOException {
-        // Given
-        var institutionId = 123;
-        var fromYear = 2020;
-        var toYear = 2023;
+        try (MockedStatic<QueryUtil> queryUtilMock = mockStatic(QueryUtil.class)) {
+            // Given
+            var institutionId = 123;
+            var fromYear = 2020;
+            var toYear = 2023;
 
-        when(elasticsearchClient.search(
-            (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
-            any()
-        )).thenThrow(new IOException("Connection failed"));
+            queryUtilMock.when(
+                    () -> QueryUtil.getOrganisationUnitOutputSearchFields(institutionId))
+                .thenReturn(List.of("organisation_unit_ids", "organisation_unit_ids_active"));
 
-        // When
-        var result = service.getTopResearchersByPublicationCount(institutionId, fromYear, toYear);
+            queryUtilMock.when(() -> QueryUtil.getAllMergedOrganisationUnitIds(institutionId))
+                .thenReturn(List.of(123, 456, 789));
 
-        // Then
-        assertTrue(result.isEmpty());
+            when(elasticsearchClient.search(
+                (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
+                any()
+            )).thenThrow(new IOException("Connection failed"));
+
+            // When
+            var result =
+                service.getTopResearchersByPublicationCount(institutionId, fromYear, toYear);
+
+            // Then
+            assertTrue(result.isEmpty());
+        }
     }
 
     @Test
@@ -308,7 +310,7 @@ public class PersonLeaderboardServiceTest {
 
         when(elasticsearchClient.search(
             (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
-            eq(PersonIndex.class)
+            eq(Void.class)
         )).thenThrow(new IOException("Connection failed"));
 
         // When
@@ -320,42 +322,99 @@ public class PersonLeaderboardServiceTest {
 
     @Test
     @SuppressWarnings("unchecked")
+    void shouldReturnResearchersWithMostCitations() throws IOException {
+        // Given
+        var institutionId = 123;
+
+        var bucket1 = mock(LongTermsBucket.class);
+        when(bucket1.key()).thenReturn(1L);
+        var totalCitations1 = mock(Aggregate.class, RETURNS_DEEP_STUBS);
+        var sum1 = mock(SumAggregate.class);
+        when(sum1.value()).thenReturn(50.0);
+        when(totalCitations1.sum()).thenReturn(sum1);
+        when(bucket1.aggregations()).thenReturn(Map.of("total_citations", totalCitations1));
+
+        var bucket2 = mock(LongTermsBucket.class);
+        when(bucket2.key()).thenReturn(2L);
+        var totalCitations2 = mock(Aggregate.class, RETURNS_DEEP_STUBS);
+        var sum2 = mock(SumAggregate.class);
+        when(sum2.value()).thenReturn(55.0);
+        when(totalCitations2.sum()).thenReturn(sum2);
+        when(bucket2.aggregations()).thenReturn(Map.of("total_citations", totalCitations2));
+
+        Aggregate byPersonAgg = mock(Aggregate.class, RETURNS_DEEP_STUBS);
+        when(byPersonAgg.lterms().buckets().array()).thenReturn(List.of(bucket1, bucket2));
+        Map<String, Aggregate> topAggs = Map.of("by_person", byPersonAgg);
+
+        var mockResponse = mock(SearchResponse.class);
+        when(mockResponse.aggregations()).thenReturn(topAggs);
+
+        var person1 = new PersonIndex();
+        person1.setDatabaseId(1);
+        person1.setName("Researcher 1");
+        var person2 = new PersonIndex();
+        person2.setDatabaseId(2);
+        person2.setName("Researcher 2");
+
+        when(elasticsearchClient.search(any(Function.class), eq(Void.class))).thenReturn(
+            mockResponse);
+        when(personIndexRepository.findByDatabaseId(1)).thenReturn(Optional.of(person1));
+        when(personIndexRepository.findByDatabaseId(2)).thenReturn(Optional.of(person2));
+
+        // When
+        var result = service.getResearchersWithMostCitations(institutionId, 2020, 2023);
+
+        // Then
+        assertEquals(2, result.size());
+        assertEquals(person2, result.getFirst().a);
+        assertEquals(55L, result.getFirst().b);
+        assertEquals(person1, result.get(1).a);
+        assertEquals(50L, result.get(1).b);
+    }
+
+    @Test
+    @SuppressWarnings("unchecked")
     void shouldLimitToTop10ResearchersInCitationCount() throws IOException {
         // Given
         var institutionId = 123;
-        var fromYear = 2020;
-        var toYear = 2023;
 
-        List<Hit<PersonIndex>> hits = new ArrayList<>();
+        List<LongTermsBucket> buckets = new ArrayList<>();
+        Map<Integer, PersonIndex> personMap = new HashMap<>();
         for (int i = 1; i <= 15; i++) {
-            var mockPerson = new PersonIndex();
-            mockPerson.setDatabaseId(i);
-            mockPerson.setName("Researcher " + i);
-            mockPerson.setCitationsByYear(Map.of(2022, i * 10)); // Different citation counts
+            LongTermsBucket bucket = mock(LongTermsBucket.class);
+            when(bucket.key()).thenReturn((long) i);
+            Aggregate totalAgg = mock(Aggregate.class, RETURNS_DEEP_STUBS);
+            SumAggregate sum = mock(SumAggregate.class);
+            when(sum.value()).thenReturn((double) (i * 10));
+            when(totalAgg.sum()).thenReturn(sum);
+            when(bucket.aggregations()).thenReturn(Map.of("total_citations", totalAgg));
+            buckets.add(bucket);
 
-            var mockHit = mock(Hit.class);
-            when(mockHit.source()).thenReturn(mockPerson);
-            hits.add(mockHit);
+            PersonIndex person = new PersonIndex();
+            person.setDatabaseId(i);
+            person.setName("Researcher " + i);
+            personMap.put(i, person);
+            when(personIndexRepository.findByDatabaseId(i)).thenReturn(Optional.of(person));
         }
 
-        var mockResponse = mock(SearchResponse.class, RETURNS_DEEP_STUBS);
-        when(mockResponse.hits().hits()).thenReturn(hits);
+        var byPersonAgg = mock(Aggregate.class, RETURNS_DEEP_STUBS);
+        when(byPersonAgg.lterms().buckets().array()).thenReturn(buckets);
+        var topAggs = Map.of("by_person", byPersonAgg);
 
-        when(elasticsearchClient.search(
-            (Function<SearchRequest.Builder, ObjectBuilder<SearchRequest>>) any(),
-            eq(PersonIndex.class)
-        )).thenReturn(mockResponse);
+        var mockResponse = mock(SearchResponse.class);
+        when(mockResponse.aggregations()).thenReturn(topAggs);
+        when(elasticsearchClient.search(any(Function.class), eq(Void.class))).thenReturn(
+            mockResponse);
 
         // When
-        var result = service.getResearchersWithMostCitations(institutionId, fromYear, toYear);
+        var result = service.getResearchersWithMostCitations(institutionId, 2020, 2023);
 
         // Then
         assertEquals(10, result.size());
-
         long previousCount = Long.MAX_VALUE;
-        for (long count : result.values()) {
-            assertTrue(count <= previousCount);
-            previousCount = count;
+        for (var entry : result) {
+            assertTrue(entry.b <= previousCount);
+            previousCount = entry.b;
         }
     }
 }
